--- a/app/index.html
+++ b/app/index.html
@@ -63,11 +63,13 @@
                 <div class="row__medium-8 row__medium-8--smaller">
                     <div class="generic-content-container">
                         <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco labor</div>is nisi ut aliquip ex
+                            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                            est laborum.</p>
+                        <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum
+                        <strong>dolore eu fugiat.</strong></p>
                     </div>
                 </div>
             </div>
@@ -107,27 +109,46 @@
         </div>
     </div>
 
-    <div id="testimonials">
-        <img src="assets/images/icons/comment.svg">
-        <h2>Real Testimonials</h2>
+    <div id="testimonials" class="page-section page-section--no-b-padding-until-large  page-section--testimonials">
+        <div class="wrapper wrapper--no-padding-until-large">
+            <h2 class="section-title section-title--blue"><img src="assets/images/icons/comment.svg" class="section-title__icon">Real <strong>Testimonials</strong></h2>
 
-        <img src="assets/images/testimonial-jane.jpg"<img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">>
-        <h3>Jane Doe</h3>
-        <h3>9 Time Escaper</h3>
-        <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
-
-        <img src="assets/images/testimonial-john.jpg">
-        <h3>John Smith</h3>
-        <h3>4 Time Escaper</h3>
-        <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit
-            amet, consectetur.&rdquo;</p>
-
-        <img src="assets/images/testimonial-cat.jpg">
-        <h3>Cat McKitty</h3>
-        <h3>6 Time Escaper</h3>
-        <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+            <div class="row row--gutters row--equal-height-at-large row--t-padding row--gutters-small generic-content-container">
+                <div class="row__large-4">
+                    <div class="testimonial">
+                        <div class="testimonial__photo">
+                            <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+                        </div>
+                        <h3 class="testimonial__title">Jane Doe</h3>
+                        <h4 class="testimonial__subtitle">9 Time Escaper</h4>
+                        <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem
+                        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+                    </div>
+                </div>
+                <div class="row__large-4">
+                    <div class="testimonial">
+                        <div class="testimonial__photo">
+                            <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320px" alt="John Smith">
+                        </div>
+                        <h3 class="testimonial__title">John Smith</h3>
+                        <h4 class="testimonial__subtitle">4 Time Escaper</h4>
+                        <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem
+                            ipsum dolor sit amet, consectetur.&rdquo;</p>
+                    </div>
+                </div>
+                <div class="row__large-4">
+                    <div class="testimonial testimonial--last">
+                        <div class="testimonial__photo">
+                            <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Meowington">
+                        </div>
+                        <h3 class="testimonial__title">Meowington</h3>
+                        <h4 class="testimonial__subtitle">6 Time Escaper</h4>
+                        <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem
+                        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
